--- a/frontend/JualBeliGame/index.html
+++ b/frontend/JualBeliGame/index.html
@@ -7,19 +7,16 @@
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./src/style.css" />
   </head>
-
   <body>
-    <!-- Hero -->
-    <section class="container hero">
-      <div class="container gap-4">
-        <h1 class="display-4 fw-bold"><span class="text-secondary">Ja</span>sa Rekber Akun Game</h1>
-        <p class="lead">Aman, terpercaya, dan cepat. Transaksi jual beli akun game tanpa takut tertipu!</p>
-        <a href="#uploadProdukSection" class="btn btn-light mt-3">Post Akun Game</a>
-        <button class="btn btn-light mt-3" onclick="scrollToKategori('Free Fire')">Lihat Produk</button>
-      </div>
+    <!-- Hero Section -->
+    <section class="container hero py-5 text-center">
+      <h1 class="display-4 fw-bold"><span class="text-secondary">Ja</span>sa Rekber Akun Game</h1>
+      <p class="lead">Aman, terpercaya, dan cepat. Transaksi jual beli akun game tanpa takut tertipu!</p>
+      <a href="#uploadProdukSection" class="btn btn-light mt-3">Post Akun Game</a>
+      <button class="btn btn-light mt-3" onclick="scrollToKategori('Free Fire')">Lihat Produk</button>
     </section>
 
-    <!-- Keunggulan -->
+    <!-- Keunggulan Section -->
     <section class="py-5">
       <div class="container">
         <h2 class="text-center mb-4">Kenapa Pilih Jasa Rekber Kami?</h2>
@@ -36,8 +33,8 @@
               <p>Proses transaksi dalam hitungan menit, Anti ribet! "Jika Mengikuti peraturan"</p>
             </div>
           </div>
-          <div class="col-md-4 mb-4">
-            <div class="p-3 border border-secondary rounded" id="uploadProdukSection">
+          <div class="col-md-4 mb-4" id="uploadProdukSection">
+            <div class="p-3 border border-secondary rounded">
               <h4>📱 Jasa Posting</h4>
               <p>Posting produk game mu pada menu Upload Produk, dan dapatkan keuntungan dengan menjual akun.</p>
             </div>
@@ -46,11 +43,11 @@
       </div>
     </section>
 
+    <!-- Upload Produk -->
     <section class="container my-5">
-      <!-- Upload produk -->
-      <h2 class="mb-4 text-center">Upload Produk</h2>
+      <h2 class="text-center mb-4">Upload Produk</h2>
       <form id="uploadForm" class="mb-5">
-        <div id="uploadFeedback" class="mt-3"></div>
+        <div id="uploadFeedback" class="mb-3"></div>
         <input type="text" id="judul" class="form-control mb-2" placeholder="Judul Produk" />
         <textarea id="deskripsi" class="form-control mb-2" placeholder="Deskripsi Produk"></textarea>
         <input type="number" id="harga" class="form-control mb-2" placeholder="Harga Produk" />
@@ -64,87 +61,64 @@
         <input type="file" id="gambar" class="form-control mb-3" accept="image/*" />
         <button type="submit" class="btn btn-success">Upload</button>
       </form>
+    </section>
 
-      <!-- Kategori Game -->
-      <section class="bg-light py-5">
-        <div class="container">
-          <h2 class="text-center mb-4">Kategori Game</h2>
-          <div class="row text-center">
-            <div class="col-6 col-md-3 mb-4">
-              <div class="p-3 border border-light-subtle rounded" role="group" id="kategori-filter">
-                <div class="kategori-icon">🔥</div>
-                <p class="mt-2">Free Fire</p>
-                <!-- <button class="btn btn-outline-secondary fs-6" data-kategori="Free Fire" onclick="scrollToKategori('Free Fire')">Free Fire</button> -->
-                <button class="btn btn-outline-secondary me-2" onclick="scrollToKategori('Free Fire')">Free Fire</button>
-              </div>
-            </div>
-            <div class="col-6 col-md-3 mb-4">
-              <div class="p-3 border border-light-subtle rounded" role="group" id="kategori-filter">
-                <div class="kategori-icon">🏹</div>
-                <p class="mt-2">Mobile Legends</p>
-                <!-- <button class="btn btn-outline-secondary fs-6" data-kategori="Mobile Legends" onclick="scrollToKategori('Mobile Legends')">Mobile Legends</button> -->
-                <button class="btn btn-outline-secondary me-2" onclick="scrollToKategori('Mobile Legends')">Mobile Legends</button>
-              </div>
-            </div>
-            <div class="col-6 col-md-3 mb-4">
-              <div class="p-3 border border-light-subtle rounded" role="group" id="kategori-filter">
-                <div class="kategori-icon">⚽</div>
-                <p class="mt-2">Pes Mobile</p>
-                <!-- <button class="btn btn-outline-secondary fs-6" data-kategori="Pes Mobile" onclick="scrollToKategori('PES Mobile')">Pes Mobile</button> -->
-                <button class="btn btn-outline-secondary me-2" onclick="scrollToKategori('PES Mobile')">PES Mobile</button>
-              </div>
-            </div>
-            <div class="col-6 col-md-3 mb-4">
-              <div class="p-3 border border-light-subtle rounded" role="group" id="kategori-filter">
-                <div class="kategori-icon">🎯</div>
-                <p class="mt-2">PUBG</p>
-                <!-- <button class="btn btn-outline-secondary fs-6" data-kategori="PUBG">PUBG</button> -->
-                <button class="btn btn-outline-secondary me-2" onclick="scrollToKategori('PUBG Mobile')">PUBG Mobile</button>
-              </div>
-            </div>
+    <!-- Kategori Game -->
+    <section class="bg-light py-5">
+      <div class="container">
+        <h2 class="text-center mb-4">Kategori Game</h2>
+        <div class="row text-center">
+          <div class="col-6 col-md-3 mb-4">
+            <button class="btn btn-outline-secondary w-100" onclick="scrollToKategori('Free Fire')">🔥 Free Fire</button>
           </div>
-        </div>
-      </section>
-
-      <!-- Tampilan Produk -->
-      <div class="container py-5">
-        <h3 class="mb-4">Produk Hari Ini</h3>
-        <div id="produkContainer">
-          <h4 id="Free Fire" class="mt-4">Free Fire</h4>
-          <div id="produk-Free Fire" class="row mb-5"></div>
-          <h4 id="Mobile Legends" class="mt-4">Mobile Legends</h4>
-          <div id="produk-Mobile Legends" class="row mb-5"></div>
-          <h4 id="PES Mobile" class="mt-4">PES Mobile</h4>
-          <div id="produk-PES Mobile" class="row mb-5"></div>
-          <h4 id="PUBG Mobile" class="mt-4">PUBG Mobile</h4>
-          <div id="produk-PUBG Mobile" class="row mb-5"></div>
+          <div class="col-6 col-md-3 mb-4">
+            <button class="btn btn-outline-secondary w-100" onclick="scrollToKategori('Mobile Legends')">🏹 Mobile Legends</button>
+          </div>
+          <div class="col-6 col-md-3 mb-4">
+            <button class="btn btn-outline-secondary w-100" onclick="scrollToKategori('PES Mobile')">⚽ PES Mobile</button>
+          </div>
+          <div class="col-6 col-md-3 mb-4">
+            <button class="btn btn-outline-secondary w-100" onclick="scrollToKategori('PUBG Mobile')">🎯 PUBG Mobile</button>
+          </div>
         </div>
       </div>
     </section>
 
-    <!-- Testimoni / Bukti -->
-    <section class="py-5">
+    <!-- Produk Hari Ini -->
+    <section class="container py-5">
+      <h3 class="mb-4 text-center">Produk Hari Ini</h3>
+      <div id="produkContainer">
+        <h4 id="Free Fire" class="mt-4">Free Fire</h4>
+        <div id="produk-Free Fire" class="row mb-5"></div>
+
+        <h4 id="Mobile Legends" class="mt-4">Mobile Legends</h4>
+        <div id="produk-Mobile Legends" class="row mb-5"></div>
+
+        <h4 id="PES Mobile" class="mt-4">PES Mobile</h4>
+        <div id="produk-PES Mobile" class="row mb-5"></div>
+
+        <h4 id="PUBG Mobile" class="mt-4">PUBG Mobile</h4>
+        <div id="produk-PUBG Mobile" class="row mb-5"></div>
+      </div>
+    </section>
+
+    <!-- Testimoni -->
+    <section class="py-5 bg-light">
       <div class="container">
         <h2 class="text-center mb-4">Testimoni & Bukti Transfer</h2>
-        <div class="row">
-          <div class="col-md-6 mb-4">
-            <div class="card border-secondary">
-              <img src="https://via.placeholder.com/600x300?text=Bukti+Transfer" class="card-img-top" />
-              <div class="card-body">
-                <p class="card-text">✅ Transaksi berhasil - Akun Free Fire, Rp150.000</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 mb-4">
-            <div class="card border-secondary">
-              <img src="https://via.placeholder.com/600x300?text=Testimoni+Chat" class="card-img-top" />
-              <div class="card-body">
-                <p class="card-text">"Terima kasih min, akun udah aman. Next order lagi!"</p>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div id="testimoniList" class="row g-4"></div>
       </div>
+    </section>
+
+    <!-- Upload Testimoni Admin -->
+    <section id="uploadTestimoniSection" class="container py-4" style="display: none">
+      <h4>Upload Testimoni (Admin Only)</h4>
+      <form id="uploadTestimoniForm">
+        <input type="file" id="gambarTestimoni" class="form-control mb-2" accept="image/*" required />
+        <textarea id="isiTestimoni" class="form-control mb-2" placeholder="Isi testimoni..." required></textarea>
+        <button type="submit" class="btn btn-success">Upload Testimoni</button>
+      </form>
+      <div id="testimoniFeedback" class="mt-2"></div>
     </section>
 
     <!-- CTA -->
@@ -156,7 +130,10 @@
       </div>
     </section>
 
-    <!-- Bootstrap JS (opsional) -->
+    <!-- Logout -->
+    <div class="text-center py-4">
+      <button class="btn btn-danger" onclick="logout()">Logout</button>
+    </div>
 
     <script src="./src/main.js" defer></script>
   </body>
