Perubahan Produk hari ini

--- a/frontend/JualBeliGame/index.html
+++ b/frontend/JualBeliGame/index.html
@@ -87,6 +87,7 @@
     <!-- Produk Hari Ini -->
     <section class="container py-5">
       <h3 class="mb-4 text-center">Produk Hari Ini</h3>
+      <p id="noProdukMessage" class="text-center text-muted fs-5">❗ Belum ada penjual yang upload produk hari ini.</p>
       <div id="produkContainer">
         <h4 id="Free Fire" class="mt-4">Free Fire</h4>
         <div id="produk-Free Fire" class="row mb-5"></div>
