Perubahan add profile

--- a/frontend/JualBeliGame/index.html
+++ b/frontend/JualBeliGame/index.html
@@ -10,7 +10,8 @@
   <body>
     <!-- Hero Section -->
     <section class="container hero py-5 text-center">
-      <h1 class="display-4 fw-bold"><span class="text-secondary">Ja</span>sa Rekber Akun Game</h1>
+      <img src="./assets/images/WhatsApp Image 2025-06-19 at 15.28.09.jpeg" alt="Logo" id="LogoHero" class="mb-3" />
+      <h1 class="display-4 fw-bold">Jasa Rekber Akun Game</h1>
       <p class="lead">Aman, terpercaya, dan cepat. Transaksi jual beli akun game tanpa takut tertipu!</p>
       <a href="#uploadProdukSection" class="btn btn-light mt-3">Post Akun Game</a>
       <button class="btn btn-light mt-3" onclick="scrollToKategori('Free Fire')">Lihat Produk</button>
@@ -127,7 +128,11 @@
       <div class="container">
         <h3 class="mb-3">Siap Transaksi Sekarang?</h3>
         <p>Hubungi admin via WhatsApp untuk mulai jual/beli akun game!</p>
-        <a href="https://wa.me/62895405600855" class="btn btn-success btn-lg">Chat Sekarang</a>
+        <img src="./assets/images/WhatsApp Image 2025-06-19 at 15.28.09.jpeg" alt="Logo" id="LogoFooter" />
+        <div class="bg-dark text-white text-center py-4">
+          <a href="https://wa.me/62895405600855" class="btn btn-success btn-lg">Chat Sekarang</a>
+          <p class="mt-2 mb-0">© 2025 Jasa Rekber Aris Store28. Aman & Terpercaya.</p>
+        </div>
       </div>
     </section>
 
